Changed some naming

--- a/client/index.html
+++ b/client/index.html
@@ -6,8 +6,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <div id="gameboard"></div>
-    <div id="gamepieces"></div>
+    <div id="board"></div>
     <script type="text/javascript" src="https://d3js.org/d3.v5.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
   </body>
