Split into 2 js files

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,6 @@
   <body>
     <div id="board"></div>
     <script type="text/javascript" src="https://d3js.org/d3.v5.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="app1.js"></script>
   </body>
 </html>
